@@ -1,3 +1,8 @@
+Fri Mar 24 14:52:03 1995    <tytso@rsx-11.mit.edu>
+
+	* kdc5_hammer.c (get_tgt): Remove the call to krb5_os_localaddr()
+		since get_in_tkt_XXXX will default appropriately.
+
 Thu Mar  2 12:34:23 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).
